sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:5: error: type mismatch;
 found   : Unit
 required: Array[Int]
  liste=actualDist(nbBases,nbPos)
                  ^NaiveBaseball:15: error: value += is not a member of Int
     base +=1 
          ^